--- a/assets/scss/login/login-popup.scss
+++ b/assets/scss/login/login-popup.scss
@@ -76,7 +76,7 @@
             font-size: 1rem; font-weight: 600;
             color: #fff;
             text-align: center;
-            div:first-child {
+            .login-icon {
               margin-right: 10px;
               padding-top: 3px;
               img {
