--- a/assets/scss/main-page/category.scss
+++ b/assets/scss/main-page/category.scss
@@ -117,6 +117,10 @@
         }
         .search-img {
           width: 32px;
+          display: flex;
+          justify-content: start;
+          align-items: center;
+
           img {
             width: 16px; height: 18px;
             cursor: pointer;
