--- a/assets/scss/main-page/category.scss
+++ b/assets/scss/main-page/category.scss
@@ -97,16 +97,21 @@
       border-bottom: 1px solid #E7E7E7;
       .search {
         display: flex;
+        justify-content: space-between;
         width: 222px; height: 42px; line-height: 40px;
         margin-bottom: 16px;
         background: #FFFFFF;
         border: 1px solid #E7E7E7;
         border-radius: 8px;
+        .search-box {
+          display: flex;
+          align-self: center;
+        }
         .total-search {
-          width: 180px;
+          width: 80%;
           flex-grow: 1;
           padding-left: 12px;
-          font-size: .88rem;
+          font-size: 1rem;
           color: #A3A3A3;
           border: none !important;
           border-radius: 8px;
@@ -118,7 +123,6 @@
         .search-img {
           width: 32px;
           display: flex;
-          justify-content: start;
           align-items: center;
 
           img {
