feat: 프로필 이미지 없을 시 default image 적용

--- a/assets/scss/main-page/top-bar.scss
+++ b/assets/scss/main-page/top-bar.scss
@@ -8,6 +8,7 @@
   .top {
     border-bottom: 2px solid #f3f3f3;
     display: flex;
+    justify-content: space-between;
     width: calc(100vw - 36px);
     height: 8vh;
     padding: 0 18px 5px 18px;
