feat: 태그 -> 작성일자로 변경

--- a/assets/scss/main-page/card.scss
+++ b/assets/scss/main-page/card.scss
@@ -168,6 +168,9 @@
             font-weight: 600;
             color: #3E82F1;
           }
+          .created-day {
+            color: #484848;
+          }
           .com-tool {
             font-weight: 500;
             color: #484848;
