feat: my 공고 ui 보완

--- a/assets/scss/main-page/card.scss
+++ b/assets/scss/main-page/card.scss
@@ -378,8 +378,8 @@
           }
           .sub-menu {
             position: absolute;
+            right: 1px;
             width: 96px; height: 98px;
-            margin: -30px 30px;
             background-color: #FFFFFF;
             border: 1px solid #E1E2E3;
             border-radius: 4px;
