--- a/assets/scss/my-page/my-page.scss
+++ b/assets/scss/my-page/my-page.scss
@@ -2,8 +2,8 @@
 
 #MyPage {
   .mypage-wrp {
-    width: 970px; height: 572px;
-    margin: 0 auto; padding-top: 123px;
+    width: 970px; min-height: 582px;
+    margin: 0 auto; padding-top: 123px; padding-bottom: 30px;
     .close {
       text-align: right;
       img {
@@ -100,6 +100,15 @@
         text-align: center;
       }
     }
+    .delete-account {
+      width: max-content;
+      margin: 0 auto;
+      padding-top: 20px;
+      text-align: center;
+      font-size: 1.1rem;
+      color: #A3A3A3;
+      cursor: pointer;
+    }
   }
 }
 
@@ -140,7 +149,7 @@
     }
 
     .m-mypage-body {
-      background-color: #F3F3F3;
+      // background-color: #F3F3F3;
       height: 100vh;
       padding-top: 18vh;
       display: flex;
@@ -251,6 +260,15 @@
             font-size: 22px;
           }
         }
+      }
+      .m-delete-account {
+        width: max-content;
+        margin: 0 auto;
+        padding-top: 30px;
+        text-align: center;
+        font-size: 1rem;
+        color: #a3a3a3;
+        cursor: pointer;
       }
     }
   }
