feat: toggle 버튼 추가

--- a/assets/scss/main-page/card.scss
+++ b/assets/scss/main-page/card.scss
@@ -287,7 +287,8 @@
 
     .sts-i-wrp {
       display: flex;
-      padding: 23px 16px;
+      align-items: center;
+      padding: 23px 32px;
       color: #005B9A;
       input[type="checkbox" i] {
         width: 16px; height: 16px;
