style: 마이페이지 css 수정

--- a/assets/scss/main-page/card.scss
+++ b/assets/scss/main-page/card.scss
@@ -299,8 +299,8 @@
         }
       }
       div:first-child {
-        flex-grow: 1;
-        text-align: right;
+        // flex-grow: 1;
+        // text-align: right;
       }
       div:nth-child(2) {
         width: max-content; height: 22px; line-height: 22px;
