fix: 모집중 에러 해결

--- a/assets/scss/main-page/card.scss
+++ b/assets/scss/main-page/card.scss
@@ -47,8 +47,9 @@
     .sts-i-wrp {
       display: flex;
       width: 1070px;
+      height: 79px;
       margin: 0 auto;
-      padding-top: 62px;
+      padding: 32px;
       color: #005B9A;
       input[type="checkbox" i] {
         width: 16px; height: 16px;
@@ -287,8 +288,9 @@
 
     .sts-i-wrp {
       display: flex;
+      height: 79px;
       align-items: center;
-      padding: 23px 32px;
+      padding: 0 32px;
       color: #005B9A;
       input[type="checkbox" i] {
         width: 16px; height: 16px;
@@ -303,14 +305,14 @@
         // text-align: right;
       }
       div:nth-child(2) {
-        width: max-content; height: 22px; line-height: 22px;
-        font-size: .75rem; font-weight: 500;
-        padding-left: 8px;
+        // width: max-content; height: 22px; line-height: 22px;
+        // font-size: .75rem; font-weight: 500;
+        // padding-left: 8px;
 
-        @include tablet {
-          height: 33px; line-height: 33px;
-          font-size: 16px;
-        }
+        // @include tablet {
+        //   height: 33px; line-height: 33px;
+        //   font-size: 16px;
+        // }
       }
     }
 
