--- a/assets/scss/main-page/card.scss
+++ b/assets/scss/main-page/card.scss
@@ -303,14 +303,14 @@
         // text-align: right;
       }
       div:nth-child(2) {
-        // width: max-content; height: 22px; line-height: 22px;
-        // font-size: .75rem; font-weight: 500;
-        // padding-left: 8px;
+        width: max-content; height: 22px; line-height: 22px;
+        font-size: .75rem; font-weight: 500;
+        padding-left: 8px;
 
-        // @include tablet {
-        //   height: 33px; line-height: 33px;
-        //   font-size: 16px;
-        // }
+        @include tablet {
+          height: 33px; line-height: 33px;
+          font-size: 16px;
+        }
       }
     }
 
